--- a/Tuto_Matplotlib_Mefira.ipynb
+++ b/Tuto_Matplotlib_Mefira.ipynb
@@ -42,10 +42,7 @@
     "\r\n",
     "### Architecture de Matplotlib\r\n",
     "\r\n",
-    "Matplotlib est une bibliothèque orientée objet qui s'organise en trois couches d'abstraction, comme illustré ci-dessous :\r\n",
-    "\r\n",
-    "![Architecture de Matplotlib](attachment:e59b15ce-6d15-449f-b60c-7b86595a0c6e.jpg)\r\n",
-    "\r\n",
+    "Matplotlib est une bibliothèque orientée objet qui s'organise en trois couches d'abstraction.\r\n",
     "Pour simplifier notre travail, nous utiliserons principalement la sous-bibliothèque `pyplot`, qui nous permet d'accéder facilement à la couche script de Matplotlib.\r\n",
     "\r\n",
     "### Bonnes pratiques avec Matplotlib\r\n",
